crates/figue/tests/integration/snapshots/main__integration__sequence__noargs_single_positional.snap
---
source: crates/figue/tests/integration/sequence.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Missing required arguments

Missing:
  <input>   # The input file to process

Example usage:
  main-138217976bbdb088 <input>

Run with --help for usage information.
